--- a/render.yaml
+++ b/render.yaml
@@ -5,5 +5,5 @@ services:
     plan: free
     buildCommand: |
       pip install -r requirements.txt
-      python -m playwright install --with-deps chromium
+      python -m playwright install chromium   # ⬅️ sans --with-deps
     startCommand: uvicorn app:app --host 0.0.0.0 --port $PORT
