--- a/render.yaml
+++ b/render.yaml
@@ -5,5 +5,4 @@ services:
     plan: free
     buildCommand: |
       pip install -r requirements.txt
-      python -m playwright install chromium   # ⬅️ sans --with-deps
-    startCommand: uvicorn app:app --host 0.0.0.0 --port $PORT
+    startCommand: bash -c "python -m playwright install chromium && uvicorn app:app --host 0.0.0.0 --port $PORT"
